ref: changed node.js.yml tests

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,4 +37,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm run test
+      - run: npm run test:cypress
+      - run: npm run test:jest
